@@ -1,3 +1,4 @@
+	* added upload and download activity timer stats for torrents
 	* made the reuse-address flag configurable on the listen socket
 	* moved UDP trackers over to use a single socket
 	* added feature to make asserts log to a file instead of breaking the process
